<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Redeactiva</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="des_rutina">Botón Mi Rutina</string>
    <string name="des_deportes">Botón Deportes</string>
    <string name="des_actrec">Botón Actividades Recreativas</string>
    <string name="desc_entrenamiento">Botón Entrenamiento</string>
    <string name="desc_deportistas">Botón Deportistas</string>
    <string name="desc_compartir">Botón Compartir</string>
    <string name="desc_perfil">Botón Perfil</string>
    <string name="desc_eventos">Botón Eventos</string>
    <string name="ur_servicio">http://ra.artcreative.co</string>
    <string name="title_activity_deportes">Deportes</string>
    <string name="str_federaciones">Federaciones</string>
    <string name="title_activity_detalle_deporte">DetalleDeporte</string>
    <string name="str_reglamento">Reglamento</string>
    <string name="str_galerias">Galerías</string>
    <string name="title_activity_galerias">Galerias</string>
    <string name="title_activity_reglamento">Reglamento</string>
    <string name="title_activity_federaciones">Federaciones</string>
    <string name="title_activity_recreativas">Recreativas</string>
    <string name="title_activity_detalle_recreativa">DetalleRecreativa</string>
    <string name="title_activity_gelerias_recreacion">Gelerias Recreacion</string>
    <string name="title_activity_reglamento_recreativa">ReglamentoRecreativa</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_entrenamiento">Entrenamiento</string>
    <string name="str_frase_d">Frase del día</string>
    <string name="str_reto">Reto de la semana</string>
    <string name="title_activity_rutinas">Rutinas</string>
    <string name="title_activity_nueva_rutina">NuevaRutina</string>
    <string name="str_titulo_rutina">Titulo de la Rutina</string>
    <string name="str_dias">Seleccione los días de la semana de su ritina</string>
    <string name="str_lunes">Lunes</string>
    <string name="str_martes">Martes</string>
    <string name="str_miercoles">Miercoles</string>
    <string name="str_jueves">Jueves</string>
    <string name="str_viernes">Viernes</string>
    <string name="str_sabado">Sábado</string>
    <string name="str_domingo">Domingo</string>
    <string name="str_hora">Seleccione la hora de su rina. Tenga en cuenta que se le notificará media hora antes</string>
    <string name="str_crear_rutina">Crear Rutina de Entremiento</string>
    <string name="hint_titulo_rutina">Escriba aquí su rutina</string>
    <string name="title_activity_editar_rutina">EditarRutina</string>
    <string name="str_editar_rutina">Guardar Rutina</string>
    <string name="str_eliminar">Eliminar Rutina</string>
    <string name="title_activity_historias">Historias</string>
    <string name="title_activity_nueva_historia">NuevaHistoria</string>
    <string name="str_capturar">Tomar una foto</string>
    <string name="str_guardar">Guardar Historia</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="str_titulo_evento">"Titulo del Evento: "</string>
    <string name="str_horario">"Horario: "</string>
    <string name="str_costo">"Costo: "</string>
    <string name="str_direccion">"Dirección: "</string>
    <string name="str_telefono">"Teléfono: "</string>
    <string name="title_activity_mapa_eventos">MapaEventos</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="str_email_perfil">"Su Email: "</string>
    <string name="str_pass">"Contraseña: "</string>
    <string name="str_guardar_perfil">Guardar</string>
    <string name="str_entrar">Iniciar Sesión</string>
    <string name="str_registrese">Registrese</string>
    <string name="str_recovery">Recuperar Contraseña</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_recovery">Recovery</string>
    <string name="str_salir">Cerrar Sesión</string>
    <string name="str_no_rutinas">Usted no ha creado ninguna rutina.</string>
    <string name="cd_foto">Foto</string>
    <string name="str_sitiow">Sitio Web</string>
    <string name="str_tipo_evento">"Tipo de Evento: "</string>
    <string name="str_entidad">Entidad: </string>
    <string name="str_clase">"Clase de evento: "</string>

</resources>
