<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevaRutina" >

    <ScrollView
        android:id="@+id/sv_rutinas"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_titulo_rutina"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/hint_titulo_rutina" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_dias"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/ck_lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_lunes" />

            <CheckBox
                android:id="@+id/ck_martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_martes" />

            <CheckBox
                android:id="@+id/ck_miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_miercoles" />

            <CheckBox
                android:id="@+id/ck_jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_jueves" />

            <CheckBox
                android:id="@+id/ck_viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_viernes" />

            <CheckBox
                android:id="@+id/ck_sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sabado" />

            <CheckBox
                android:id="@+id/ck_domingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/str_domingo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_hora"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TimePicker
                android:id="@+id/tp_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp" />

            <Button
                android:id="@+id/btn_guardar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_bg"
                android:text="@string/str_crear_rutina"
                android:textColor="#fff" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
